# langchain-google-el-carro-python

./: .coveragerc  .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
.prow/: prow_run_e2e_tests.sh
docs/: chat_message_history.ipynb  chat_message_history.md  conf.py  doc_loader.ipynb  doc_loader.md  document_loader.ipynb  index.rst
docs/langchain_google_el_carro/: engine.rst  history.rst  loader.rst
samples/: demo_chat_history.py  demo_doc_loader_advanced.py  demo_doc_loader_basic.py
src/langchain_google_el_carro/: __init__.py  chat_message_history.py  engine.py  loader.py
tests/: test_chat_message_history.py  test_elcarro_engine.py  test_loader.py
